...
  Created by Павел Анохов on 03.04.16.
  Copyright © 2016 IndependentLabs. All rights reserved.
*/


/* Main window title */
"Route_window_title" = "Route";

/* About window title */
"About_window_Title" = "About";

/* Arrival station window title */
"Arrival_window_title" = "Arrival";
...
"District_row_title" = "District";

/* Main page empty departure cell placeholder */
"From_cell_placeholder" = "From...";

/* Station info window title */
"Info_window_title" = "Info";

/* Tickets demo alert */
"Demo_alert_title" = "Not in demo!";

/* Station info Region row title */
"Region_row_title" = "Region";
...
